# webserver

./: .gitignore  CMakeLists.txt  README.md
src/http_client/: client.hpp  core.hpp  header.hpp  http_client.hpp  local_runner.cpp  main.cpp  parameter.hpp  runner.hpp
src/http_client/common/: request.hpp
src/http_client/core/: client.hpp  connection.hpp  parameter.hpp  request.hpp  response.hpp  runner.hpp  stream_parser.hpp  stream_populator.hpp
src/http_server/: http_server.cpp
